non-block update DB

--- a/src/main/resources/templates/admin-dash.html
+++ b/src/main/resources/templates/admin-dash.html
@@ -59,29 +59,31 @@
                     </div>
                 </div>
             </div>
-            <h3 class="pt-5 pb-3">Manage Database</h3>
-            <div id="step">
-                <p style="font-weight: bold">Step 1: Download Existing DB as CSV file</p>
-                <p>Step 2: Update the CSV on local machine, save and name the new CSV as database.csv, the upload by clicking Upload New DB button
-                </p>
-                <p>Step 3: Once uploaded, click next and proceed to data validation</p>
+            <div id="manage" th:unless="${lock}">
+                <h3 class="pt-5 pb-3">Manage Database</h3>
+                <div id="step">
+                    <p style="font-weight: bold">Step 1: Download Existing DB as CSV file</p>
+                    <p>Step 2: Update the CSV on local machine, save and name the new CSV as database.csv, the upload by
+                        clicking Upload New DB button
+                    </p>
+                    <p>Step 3: Once uploaded, click next and proceed to data validation</p>
+                </div>
+                <button class="btn btn-secondary mt-4" id="download">Download Existing DB</button>
+                <form id="upload-file-form" style="display: none">
+                    <input type="file" id="file" name="file" hidden>
+                    <label class="btn btn-dark mt-4" for="file" style="padding-top: 10px">Upload New DB</label>
+                    <p><small>Acceptable file type: CSV</small></p>
+                </form>
+                <div id="final" style="display: none">
+                    <a href="/admin-validate">
+                        <button class="btn btn-dark mt-4">Next</button>
+                    </a>
+                    <p><small id="file-chosen"></small></p>
+                </div>
+                <div id="upload-file-message" class="alert alert-danger mt-2 mb-1"
+                     style="display: none;width:350px"></div>
             </div>
-
-
-            <button class="btn btn-secondary mt-4" id="download">Download Existing DB</button>
-            <form id="upload-file-form" style="display: none">
-                <input type="file" id="file" name="file" hidden>
-                <label class="btn btn-dark mt-4" for="file" style="padding-top: 10px">Upload New DB</label>
-                <p><small>Acceptable file type: CSV</small></p>
-            </form>
-            <div id="final" style="display: none">
-                <a href="/admin-validate">
-                    <button class="btn btn-dark mt-4">Next</button>
-                </a>
-                <p><small id="file-chosen"></small></p>
-            </div>
-
-            <div id="upload-file-message" class="alert alert-danger mt-2 mb-1" style="display: none;width:350px"></div>
+            <div class="alert alert-secondary mt-3" role="alert" th:if="${lock}">Updating database... Please try again in a few minutes</div>
         </div>
     </div>
 </div>
@@ -102,9 +104,10 @@
             download.style.display = 'none';
             document.querySelector('#upload-file-form').style.display = 'block';
             step.children[0].removeAttribute('style');
-            step.children[1].setAttribute('style','font-weight:bold');
+            step.children[1].setAttribute('style', 'font-weight:bold');
         })
     }
+
     function upload() {
         const file = document.getElementById('file');
         const fileChosen = document.getElementById('file-chosen');
@@ -128,7 +131,7 @@
                         document.querySelector('#final').style.display = 'block';
                         fileChosen.textContent = file.files[0].name + ' has been uploaded';
                         step.children[1].removeAttribute('style');
-                        step.children[2].setAttribute('style','font-weight:bold');
+                        step.children[2].setAttribute('style', 'font-weight:bold');
                         $("#upload-file-message").hide();
                     }
                 },
