add encodeURI to search term

--- a/src/main/resources/templates/person-detail.html
+++ b/src/main/resources/templates/person-detail.html
@@ -374,7 +374,7 @@
         const referer = document.referrer;
         const index = referer.indexOf('keyword=');
         if (index !== -1) {
-            searchBar.value = referer.slice(index + 8).replace('%20', ' ');
+            searchBar.value = decodeURI(referer.slice(index + 8));
         }
     }
 
