--- a/src/main/resources/templates/article-detail.html
+++ b/src/main/resources/templates/article-detail.html
@@ -253,12 +253,12 @@
 
     fillSearchBar();
 
-    function fillSearchBar(){
+    function fillSearchBar() {
         const searchBar = document.querySelector("#search");
         const referer = document.referrer;
         const index = referer.indexOf('keyword=');
-        if(index!==-1){
-            searchBar.value = referer.slice(index+8).replace('%20',' ');
+        if (index !== -1) {
+            searchBar.value = decodeURI(referer.slice(index + 8));
         }
     }
 </script>
