add journal to the person-detail

--- a/src/main/resources/templates/article-detail.html
+++ b/src/main/resources/templates/article-detail.html
@@ -174,7 +174,7 @@
                             let year = d.data.year!==undefined?d.data.year:'N.A';
                             return `<p><b>Title:&nbsp</b>${result}</p><br>
                                 <p><b>Year:&nbsp</b>${year}</p>`;
-                        } else if (d.data.categories===2){
+                        } else if (d.data.category===2){
                             return `<p><b>Title:&nbsp</b>${result}</p>`;
                         }
                     }else if(d.dataType==='edge'){
