optimize import and code

--- a/src/main/resources/templates/admin-dash.html
+++ b/src/main/resources/templates/admin-dash.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="images/favicon-small.png" sizes="16x16">
     <link rel="icon" type="image/png" href="images/favicon-large.png" sizes="32x32">
     <title>Graphs DB</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -98,64 +97,5 @@
     </div>
 </div>
 </body>
-<script>
-    let step = document.querySelector('#step');
-
-    function logout() {
-        $.get("/logout", data => {
-            window.location.href = "/login";
-        })
-    }
-
-    function download() {
-        const download = document.querySelector('#download');
-        download.addEventListener('click', function () {
-            window.location.href = '/download';
-            download.style.display = 'none';
-            document.querySelector('#upload-file-form').style.display = 'block';
-            step.children[0].removeAttribute('style');
-            step.children[1].setAttribute('style', 'font-weight:bold');
-        })
-    }
-
-    function upload() {
-        const file = document.getElementById('file');
-        const fileChosen = document.getElementById('file-chosen');
-        file.addEventListener('change', function () {
-            document.querySelector('#upload-file-form').style.display = 'none';
-            document.querySelector('#spinner').setAttribute('style', 'display:block');
-            $.ajax({
-                url: "/upload",
-                type: "POST",
-                data: new FormData($("#upload-file-form")[0]),
-                enctype: 'multipart/form-data',
-                processData: false,
-                contentType: false,
-                cache: false,
-                success: function (data) {
-                    // Handle upload success
-                    if (data !== 'success') {
-                        $("#upload-file-message").text(data).show();
-                    } else {
-                        document.querySelector('#spinner').setAttribute('style', 'display:none');
-                        document.querySelector('#final').style.display = 'block';
-                        fileChosen.textContent = file.files[0].name + ' has been uploaded';
-                        step.children[1].removeAttribute('style');
-                        step.children[2].setAttribute('style', 'font-weight:bold');
-                        $("#upload-file-message").hide();
-                    }
-                },
-                error: function () {
-                    // Handle upload error
-                    $("#upload-file-message").text(
-                        "File not uploaded (perhaps it's too much big)").show();
-                }
-            });
-        })
-    }
-
-
-    download();
-    upload();
-</script>
+<script src="js/admin.js"></script>
 </html>
