--- a/src/main/resources/templates/listing.html
+++ b/src/main/resources/templates/listing.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="images/favicon-small.png" sizes="16x16">
     <link rel="icon" type="image/png" href="images/favicon-large.png" sizes="32x32">
     <title>Graphs DB</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -29,20 +28,25 @@
                 <div class="col-12 col-md-8 col-lg-10">
                     <div class="form-group form-search mb-0 mr-6">
                         <span class="fa fa-search form-icon"></span>
-                        <input type="text" id="search" class="form-control" placeholder="Search person, article, journal...">
+                        <input type="text" id="search" class="form-control" th:value="${keyword}"
+                               placeholder="Search person, article, journal...">
                         <div class="search-dropdown" id="suggest" style="display: none">
-                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"> <span id="person"></span> results in <em>Person</em></button>
-                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"> <span id="article"></span> results in <em>Article</em></button>
-                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"> <span id="journal"></span> results in <em>Journal</em></button>
-                            <button type="button" class="dropdown-item disabled" id="alert0"> <i> <em>0</em> result is found</i> </button>
+                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"><span
+                                    id="person"></span> results in <em>Person</em></button>
+                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"><span
+                                    id="article"></span> results in <em>Article</em></button>
+                            <button type="button" class="dropdown-item suggestButton" onclick="toList(this)"><span
+                                    id="journal"></span> results in <em>Journal</em></button>
+                            <button type="button" class="dropdown-item disabled" id="alert0"><i> <em>0</em> result is
+                                found</i></button>
                         </div>
                     </div>
                 </div>
             </div>
-            <h6 class="py-3" th:text = "|Found ${totalNodes} Results|">Found 123 Results</h6>
+            <h6 class="py-3" th:text="|Found ${totalNodes} Results|">Found 123 Results</h6>
 
             <div th:if="${category} eq 0" th:each="p:${persons}" th:id="|card${category}|">
-                <a class="card-hover" th:href = "|person-detail?name=${p.name}|">
+                <a class="card-hover" th:href="|person-detail?name=${p.name}|">
                     <div class="card-m card-person">
                         <div class="row">
                             <div class="col-2 col-lg-1">
@@ -52,6 +56,8 @@
                                 <h4 class="pb-3" th:text="${p.name}" id="name">Edson C. Tandoc Jr.</h4>
                                 <p><b>Gender</b></p>
                                 <p class="ml-3" th:text="${p.gender}" id="gender">Male</p>
+                                <p class="ml-5"><b>Status</b></p>
+                                <p class="ml-3" th:text="${p.status}" id="status">Male</p>
                                 <p class="ml-5"><b>Articles</b></p>
                                 <p class="ml-3" th:text="${p.counter}" id="counter">121</p>
                             </div>
@@ -68,12 +74,14 @@
                                 <span class="far fa-file-alt card-icon"></span>
                             </div>
                             <div class="col-10 col-lg-11">
-                                <h4 class="pb-3" th:text="${a.title}" id="title">Defining “Fake News” A typology of scholarly definitions</h4>
+                                <h4 class="pb-3" th:text="${a.title}" id="title">Defining “Fake News” A typology of
+                                    scholarly definitions</h4>
                                 <p th:text="${a.firstAuthor}" id="firstAuthor">EC Tandoc Jr, ZW Lim, R Ling</p>
                                 <p class="ml-5"><b>Published In</b></p>
                                 <p class="ml-3" th:text="${a.year!=0?a.year:'N.A'}" id="year">2018</p>
                                 <p class="ml-5"><b>Journal</b></p>
-                                <p class="ml-3" th:text="${a.journalTitle?:'N.A'}" id="journalTitle">Digital Journalism</p>
+                                <p class="ml-3" th:text="${a.journalTitle?:'N.A'}" id="journalTitle">Digital
+                                    Journalism</p>
                             </div>
                         </div>
                     </div>
@@ -96,123 +104,18 @@
                     </div>
                 </a>
             </div>
-
             <button class="btn btn-dark my-4" id="loadMore">Load More</button>
         </div>
     </div>
 </div>
 <script src="js/search.js"></script>
+<script src="js/loadMore.js"></script>
 <script type="text/javascript" th:inline="javascript">
     let pageNumber = 0;
     const category = /*[[${category}]]*/ 20;//person:0, article:1, journal:2, search:3
     const totalPage = /*[[${totalNodes}/5]]*/ 0;
     const keyword = /*[[${keyword}]]*/ "";
-    $(function () {
-        $('.button-checkbox').each(function () {
-
-            // Settings
-            var $widget = $(this),
-                $button = $widget.find('button'),
-                $checkbox = $widget.find('input:checkbox'),
-                color = $button.data('color'),
-                settings = {
-                    on: {},
-                    off: {}
-                };
-
-            // Event Handlers
-            $button.on('click', function () {
-                $checkbox.prop('checked', !$checkbox.is(':checked'));
-                $checkbox.triggerHandler('change');
-                updateDisplay();
-            });
-            $checkbox.on('change', function () {
-                updateDisplay();
-            });
-
-            // Actions
-            function updateDisplay() {
-                var isChecked = $checkbox.is(':checked');
-
-                // Set the button's state
-                $button.data('state', (isChecked) ? "on" : "off");
-
-                // Set the button's icon
-                $button.find('.state-icon')
-                    .removeClass()
-                    .addClass('state-icon ' + settings[$button.data('state')].icon);
-
-                // Update the button's color
-                if (isChecked) {
-                    $button
-                        .removeClass('btn-default')
-                        .addClass('btn-' + color + ' active');
-                } else {
-                    $button
-                        .removeClass('btn-' + color + ' active')
-                        .addClass('btn-default');
-                }
-            }
-
-            // Initialization
-            function init() {
-                updateDisplay();
-            }
-
-            init();
-        });
-        $('#loadMore').click( function () {
-            if (pageNumber>totalPage){
-                return;
-            }
-            pageNumber++;
-            console.log(pageNumber);
-            let loadMoreBtn = $('#loadMore');
-            $.get(`loadmore?category=${category}&page=${pageNumber}&keyword=${keyword}`,d=> {
-                // $(`#card${category}>input:first`);
-                if(category===0){
-                    d.personListVOS.forEach(data=>{
-                        let card = $('#card0').clone();
-                        card.find('h4#name').html(data.name);
-                        card.find('p#gender').html(data.gender);
-                        card.find('p#counter').html(data.counter);
-                        card.find('a').attr('href',`person-detail?name=${data.name}`);
-                        loadMoreBtn.before(card);
-                    });
-                }else if(category===1){
-                    d.articleListVOS.forEach(data=>{
-                        let card = $('#card1').clone();
-                        card.find('h4#title').html(data.title);
-                        card.find('p#year').html(data.year);
-
-                        if(data.journalTitle===null){
-                            card.find('p#journalTitle').html('N.A');
-                        }else{
-                            card.find('p#journalTitle').html(data.journalTitle);
-                        }
-
-                        card.find('p#firstAuthor').html(data.firstAuthor);
-                        card.find('a').attr('href',`article-detail?title=${data.title}`);
-                        loadMoreBtn.before(card);
-                    })
-                }else if(category===2){
-                    d.journalListVOS.forEach(data=>{
-                        let card = $("#card2").clone();
-                        card.find('h4#title').html(data.title);
-                        card.find('p#counter').html(data.counter);
-                        card.find('a').attr('href',`journal-detail?title=${data.title}`);
-                        loadMoreBtn.before(card);
-                    })
-                }
-            })
-        });
-    });
-
-    function fillSearchBar(){
-        const searchBar = document.querySelector("#search");
-        searchBar.value = keyword;
-    }
-    fillSearchBar();
+    loadMore();
 </script>
 </body>
 </html>
