--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -389,3 +389,17 @@ a.card-hover:hover {
   pointer-events: none; 
   box-shadow: inset 0 0 0 #efefef, 0 2px 15px 0 rgba(0,0,0,.06);
 }
+
+/** about us **/
+.footer {
+  border-top: 1px solid #2c2c2c;
+}
+
+.footer p {
+  color: #2c2c2c;
+}
+
+.footer a {
+  color: #2c2c2c;
+  text-decoration: none;
+}
