--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,14 +15,18 @@
 
 <body class="home-bg">
 <div class="home-gradient"></div>
-<div class="container home-content">
-    <div class="row">
+<div class="container d-flex flex-column vh-100">
+    <div class="row mb-auto">
         <div class="col-12 offset-md-1 col-md-10 offset-lg-2 col-lg-8">
-            <div class="logo pt-5 pt-md-0 pb-5">
+            <div class="logo py-5 mt-4">
                 <a href="/">
                     <img src="images/graphs-logo.svg" class="mx-auto">
                 </a>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 offset-md-1 col-md-10 offset-lg-2 col-lg-8">
             <h1 class="pt-5">Find & discover scholarly literature with a new experience.</h1>
             <div class="form-group form-search py-4 my-3">
                 <span class="fa fa-search form-icon"></span>
@@ -39,7 +43,7 @@
                 </div>
             </div>
             <h2>Explore</h2>
-            <div class="row pb-3">
+            <div class="row pb-5 mb-4">
                 <div class="col-12 col-md-4">
                     <a href="/listing?category=0" class="card-hover">
                         <div class="card-m card-person">
@@ -70,7 +74,18 @@
             </div>
         </div>
     </div>
+    <div class="row footer py-3 mt-auto">
+        <div class="col-6">
+            <p>&#169; <span id="footer-year">2021</span> <a href="index.html">Graphs.be</a></p>
+        </div>
+        <div class="col-6 text-right">
+            <a href="about.html">About Us</a>
+        </div>
+    </div>
 </div>
 <script src="js/search.js"></script>
+<script>
+    document.querySelector("#footer-year").innerHTML = new Date().getFullYear();
+</script>
 </body>
 </html>
