--- a/src/main/resources/templates/journal-detail.html
+++ b/src/main/resources/templates/journal-detail.html
@@ -15,8 +15,8 @@
 </head>
 
 <body class="journal-bg">
-<div class="container">
-    <div class="row">
+<div class="container d-flex flex-column vh-100">
+    <div class="row mb-auto">
         <div class="col-12 col-lg-8">
             <div class="row pt-0 pb-2 pt-md-4">
                 <div class="col-12 col-md-4 col-lg-3 my-auto">
@@ -93,6 +93,14 @@
             </div>
         </div>
     </div>
+    <div class="row footer py-3 mt-auto">
+        <div class="col-6">
+            <p>&#169; <span id="footer-year">2021</span> <a href="index.html">Graphs.be</a></p>
+        </div>
+        <div class="col-6 text-right">
+            <a href="about.html">About Us</a>
+        </div>
+    </div>
 </div>
 <script src="js/search.js"></script>
 <script src="js/barchart.js"></script>
@@ -102,6 +110,7 @@
     renderGraph();
     renderBar('barContainer');
     fillSearchBar();
+    document.querySelector("#footer-year").innerHTML = new Date().getFullYear();
 </script>
 </body>
 </html>
