modify href of index

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -76,7 +76,7 @@
     </div>
     <div class="row footer py-3 mt-auto">
         <div class="col-6">
-            <p>&#169; <span id="footer-year">2021</span> <a href="index.html">Graphs.be</a></p>
+            <p>&#169; <span id="footer-year">2021</span> <a href="/">Graphs.be</a></p>
         </div>
         <div class="col-6 text-right">
             <a href="about.html">About Us</a>
