--- a/src/main/resources/templates/listing.html
+++ b/src/main/resources/templates/listing.html
@@ -109,7 +109,7 @@
     </div>
     <div class="row py-3 footer">
         <div class="col-6">
-            <p>&#169; <span id="footer-year">2011</span> <a href="index.html">Graphs.be</a></p>
+            <p>&#169; <span id="footer-year">2011</span> <a href="/">Graphs.be</a></p>
         </div>
         <div class="col-6 text-right">
             <a href="about.html">About Us</a>
